--- a/sdk/identity/identity-vscode/package.json
+++ b/sdk/identity/identity-vscode/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.1",
   "sdk-type": "client",
   "description": "Use the Azure Account extension for Visual Studio Code to authenticate with Azure Identity",
-  "main": "dist/index.js",
-  "module": "dist-esm/src/index.js",
-  "types": "./types/identity-vscode.d.ts",
+  "main": "./dist/commonjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/commonjs/index.d.ts",
   "scripts": {
     "build": "npm run clean && dev-tool run build-package && dev-tool run extract-api",
     "build:samples": "echo skipped",
-    "build:test": "dev-tool run build-package && dev-tool run bundle",
+    "build:test": "echo skipped",
     "check-format": "dev-tool run vendored prettier --list-different --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"*.{js,json}\" \"samples-dev/**/*.ts\"",
     "clean": "dev-tool run vendored rimraf --glob dist dist-* types *.tgz *.log",
     "execute:samples": "echo skipped",
@@ -25,8 +25,8 @@
     "test:browser": "npm run clean && npm run build:test && npm run unit-test:browser && npm run integration-test:browser",
     "test:node": "npm run clean && npm run build:test && npm run unit-test:node && npm run integration-test:node",
     "unit-test": "npm run unit-test:node && npm run unit-test:browser",
-    "unit-test:browser": "npm run clean && dev-tool run build-package && dev-tool run build-test && dev-tool run test:vitest --browser",
-    "unit-test:node": "dev-tool run test:vitest",
+    "unit-test:browser": "echo skipped",
+    "unit-test:node": "echo skipped",
     "update-snippets": "echo skipped"
   },
   "files": [
@@ -56,9 +56,9 @@
   "homepage": "https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/identity/identity-vscode/README.md",
   "sideEffects": false,
   "dependencies": {
-    "@azure/identity": "^4.0.1",
+    "@azure/identity": "^4.5.0",
     "keytar": "^7.6.0",
-    "tslib": "^2.2.0"
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@azure-tools/test-recorder": "^4.1.0",
@@ -66,18 +66,12 @@
     "@azure/core-client": "^1.7.0",
     "@azure/dev-tool": "^1.0.0",
     "@azure/eslint-plugin-azure-sdk": "^3.0.0",
-    "@types/jws": "^3.2.2",
     "@types/node": "^18.0.0",
-    "@types/qs": "^6.5.3",
-    "@types/uuid": "^8.0.0",
-    "@vitest/browser": "^2.1.6",
     "@vitest/coverage-istanbul": "^2.1.6",
     "dotenv": "^16.0.0",
     "eslint": "^9.9.0",
-    "inherits": "^2.0.3",
     "playwright": "^1.49.0",
     "typescript": "~5.6.2",
-    "util": "^0.12.1",
     "vitest": "^2.1.6"
   },
   "type": "module",
@@ -96,5 +90,26 @@
     ],
     "selfLink": false
   },
-  "browser": "./dist/browser/index.js"
+  "browser": "./dist/browser/index.js",
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "browser": {
+        "types": "./dist/browser/index.d.ts",
+        "default": "./dist/browser/index.js"
+      },
+      "react-native": {
+        "types": "./dist/react-native/index.d.ts",
+        "default": "./dist/react-native/index.js"
+      },
+      "import": {
+        "types": "./dist/esm/index.d.ts",
+        "default": "./dist/esm/index.js"
+      },
+      "require": {
+        "types": "./dist/commonjs/index.d.ts",
+        "default": "./dist/commonjs/index.js"
+      }
+    }
+  }
 }
