--- a/sdk/ai/ai-projects/package.json
+++ b/sdk/ai/ai-projects/package.json
@@ -72,6 +72,7 @@
     "@azure/opentelemetry-instrumentation-azure-sdk": "^1.0.0-beta.7",
     "@azure-tools/test-credential": "^2.0.0",
     "@azure-tools/test-recorder": "^4.1.0",
+    "@azure-tools/test-utils-vitest": "^1.0.0",
     "@microsoft/api-extractor": "^7.40.3",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/instrumentation": "0.53.0",
